chromeos: Fix flaky WallpaperControllerTest.MojoWallpaperObserver

The test needs to explicitly wait for the wallpaper average color
calculation to finish before making assertions about observer methods
being called.

Clean up RunAllTasksUntilIdle() to match the version in content.
I suspect this function was copy/pasted to avoid an ash dependency on
content just for test utils -- it's been there at least since 2015.

Don't modify the command line to enable the shelf coloring feature
because it is on by default (and has been for a long time).

Bug: 786266
Test: ash_unittests --gtest_shuffle --gtest_repeat=50
Change-Id: I5b8c4e0c93de4fee0a58f672c3dd9d11a6c3f42a
Reviewed-on: https://chromium-review.googlesource.com/794344
Reviewed-by: Ken Rockot <rockot@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520345}
Former-commit-id: 7419e6dfb31c3cd6ba3f8758bc45478f761b28cb