mojo/public/cpp/bindings/interface_ptr_set.h
@@ -51,6 +51,13 @@ class PtrSet {
 
   bool empty() const { return ptrs_.empty(); }
 
+  void FlushForTesting() {
+    for (const auto& it : ptrs_) {
+      if (it)
+        it->FlushForTesting();
+    }
+  }
+
  private:
   class Element {
    public:
@@ -74,6 +81,8 @@ class PtrSet {
     base::WeakPtr<Element> GetWeakPtr() {
       return weak_ptr_factory_.GetWeakPtr();
     }
+
+    void FlushForTesting() { ptr_.FlushForTesting(); }
 
    private:
     static void DeleteElement(Element* element) { delete element; }
